--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,12 @@ dependencies:
   image_picker : any
   font_awesome_flutter: any
   get_storage: any
-  google_sign_in: ^6.2.2
+  google_sign_in: any
   readmore : any
   searchfield: any
+  shimmer_animation : any
+  cached_network_image : any
+  pull_to_refresh: any
 
 
 dev_dependencies:
