--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   image_picker : any
   font_awesome_flutter: any
   get_storage: any
-  google_sign_in: any
+  google_sign_in: ^7.2.0
   readmore : any
   searchfield: any
   shimmer_animation : any
